syntax = "proto3";

package types;

service Driver {
    rpc Create (DriverOptions) returns (ClusterInfo) {}
    rpc Remove (ClusterInfo) returns (Empty) {}
}

message Empty {
}

message DriverOptions {
    map<string, bool> bool_options = 1;

    map<string, string> string_options = 2;

    map<string, int64> int_options = 3;

    map<string, StringSlice> string_slice_options = 4;
}

message StringSlice {
    repeated string value = 1;
}

message ClusterInfo {
    string version = 1;

    string service_account_token = 2;

    string endpoint = 3;

    string username = 4;

    string password = 5;

    string root_ca_certificate = 6;

    string client_certificate = 7;

    string client_key = 8;

    int64 node_count = 9;

    map<string, string> metadata = 10;

    string status = 11;
}
